syntax = "proto3";

package tutorial.blogentrymanager.grpc;

option java_multiple_files = true;
option java_package = "com.example.blogentrymanager.grpc";


service BlogEntryService {
  rpc GetBlogEntries (GetBlogEntriesRequest) returns (GetBlogEntriesResponse) {}
  rpc GetBlogEntryById (GetBlogEntryByIdRequest) returns (GetBlogEntryByIdResponse) {}
}


message BlogEntry {
  int32 id = 1;
  string title = 2;
  string entryText = 3;
}

message GetBlogEntriesRequest {
}

message GetBlogEntriesResponse {
  repeated BlogEntry entries = 1;
}

message GetBlogEntryByIdRequest {
  string id = 1;
}

message GetBlogEntryByIdResponse {
  BlogEntry entry = 1;
}